# mcp-docx

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.cursor/skills/mcp-docx-document-structures/: SKILL.md
.cursor/skills/mcp-docx-encoding/: SKILL.md
.cursor/skills/mcp-docx-fluency/: SKILL.md
.cursor/skills/mcp-docx-formatting/: SKILL.md
.cursor/skills/mcp-docx-merge-extract/: SKILL.md
.cursor/skills/mcp-docx-quick-reference/: SKILL.md
.cursor/skills/mcp-docx-simple-vs-formatted/: SKILL.md
.cursor/skills/mcp-docx-templates/: SKILL.md
src/mcp_docx/: __init__.py  server.py  tools_convert.py  tools_edit.py  tools_generate.py  tools_manipulate.py
src/mcp_docx/lib/: __init__.py  docx_utils.py
tests/: test_mcp_smoke.py  test_optional_libs.py
